--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
 
 dependencies {
 
+    implementation 'com.lcodecorex:tkrefreshlayout:1.0.7'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
 
     implementation 'com.github.hackware1993:MagicIndicator:1.6.0' // for support lib
